--- a/src/app/shared/modules/create-customers/create-customer.component.html
+++ b/src/app/shared/modules/create-customers/create-customer.component.html
@@ -1,1 +1,44 @@
-<p>create-customer works!</p>
+<div>
+  <form>
+    <div class="row mb-3">
+      <label for="title" class="col-sm-2 col-form-label text-start text-sm-end">Title</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="title">
+      </div>
+    </div>
+    <div class="row mb-3">
+      <label for="email" class="col-sm-2 col-form-label text-start text-sm-end">Email</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" id="email">
+      </div>
+    </div>
+
+    <div class="row mb-3">
+      <label for="region" class="col-sm-2 col-form-label text-start text-sm-end">Region</label>
+      <div class="col-sm-10">
+        <select class="form-select" id="region">
+          <option selected>Select</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="row mb-3">
+      <label for="country" class="col-sm-2 col-form-label text-start text-sm-end">Country</label>
+      <div class="col-sm-10">
+        <select class="form-select" id="country">
+          <option selected>Select</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="text-center">
+      <button type="button" class="btn btn-primary">Create Customer</button>
+    </div>
+  </form>
+</div>
