--- a/src/app/shared/modules/create-pins/create-pin.component.html
+++ b/src/app/shared/modules/create-pins/create-pin.component.html
@@ -1,1 +1,59 @@
-<p>create-pin works!</p>
+<div>
+  <form [formGroup]="formGroup" novalidate>
+    <div class="row mb-3">
+      <label for="title" class="col-sm-3 col-form-label text-start text-sm-end">Title</label>
+      <div class="col-sm-9">
+        <input type="text" class="form-control" id="title" formControlName="title">
+        <div *ngIf="formGroup.get('title')?.invalid && formGroup.get('title')?.touched" class="invalid-feedback">
+          <div>
+            Invalid
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row mb-3">
+      <label class="col-sm-3 col-form-label text-start text-sm-end">Image</label>
+      <div class="col-sm-9">
+        <div ng2FileDrop
+             class="file-drop-zone form-control d-flex align-items-center"
+             [class.hover]="hasBaseDropZoneOver"
+             (fileOver)="fileOver($event)"
+             (click)="fileInput.click()"
+             (onFileDrop)="fileSelectOrDrop($event)"
+        >
+          Choose & Drag and Drop file here
+        </div>
+        <input #fileInput type="file" ng2FileSelect (onFileSelected)="fileSelectOrDrop($event)" style="display: none;">
+        <div *ngIf="fileSelectError" class="invalid-feedback">
+          {{fileSelectStr}}
+        </div>
+      </div>
+    </div>
+
+    <div class="row mb-3">
+      <label class="col-sm-3 col-form-label text-start text-sm-end">Colaboratory</label>
+      <div class="col-sm-9">
+        <ngx-select></ngx-select>
+      </div>
+    </div>
+
+    <div class="row mb-3">
+      <label class="col-sm-3 col-form-label text-start text-sm-end">Privacy</label>
+      <div class="col-sm-9 d-flex align-items-center">
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="visibility" id="privateRadio" value="Private">
+          <label class="form-check-label" for="privateRadio">Private</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="visibility" id="publicRadio" value="Public">
+          <label class="form-check-label" for="publicRadio">Public</label>
+        </div>
+      </div>
+    </div>
+
+    <div class="text-center">
+      <button type="button" class="btn btn-primary">Create Pin</button>
+    </div>
+  </form>
+</div>
