--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,17 @@
+<nav class="navbar navbar-expand navbar-light bg-primary" data-bs-theme="dark">
+  <div class="container">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#" routerLink="/pins" routerLinkActive="active" #rla="routerLinkActive">Pins</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" routerLink="/customers" routerLinkActive="active" #rla="routerLinkActive">Customers</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
