--- a/src/app/shared/modules/create-pins/create-pin.component.scss
+++ b/src/app/shared/modules/create-pins/create-pin.component.scss
@@ -1,7 +1,8 @@
 .file-drop-zone {
   border: dotted 3px lightgray;
-  height: 100%;
+  height: 100px;
   background-color: lightgray;
+  cursor: pointer;
 
   &.hover {
     border: dotted 3px green;
